@@ -7,7 +7,7 @@ var titlea = new Array();
 var texta = new Array();
 
 titlea[0] = "Version";
-texta[0] = "Kiwix 0.9 alpha3";
+texta[0] = "Kiwix 0.9 alpha4";
 
 titlea[1] = "Developers";
 texta[1] = "Emmanuel Engelhart (kelson@kiwix.org)<br/>Guillaume Duhamel (gduhamel@linterweb.com)<br/>Fabien Coulon (fcoulon@linterweb.com)<br/>Renaud Gaudin (rgaudin@gmail.com)<br/>Wilfredo Rodriguez (wilfredor@kiwix.org)";
