@@ -134,6 +134,13 @@ NS_IMETHODIMP ZimAccessor::GetMainPageUrl(nsACString &url, PRBool *retVal) {
   try {
     if (this->reader != NULL) {
       string urlstr = this->reader->getMainPageUrl();
+
+      if (urlstr.empty()) {
+	urlstr = this->reader->getFirstPageUrl(); 
+	std::cout << "Welcome page: " <<  urlstr << std::endl;
+      }
+
+      std::cout << "Welcome page: " <<  urlstr << std::endl;
       url = nsDependentCString(urlstr.c_str(), urlstr.size());
       *retVal = PR_TRUE;
     }
